--- a/index.html
+++ b/index.html
@@ -25,6 +25,54 @@
                 </div>
 
             </div>
+            
+            <div class="sidebar-body">
+                <nav class="sidebar-nav">
+                    <ul>
+                        <li>
+                            <a href="#" class="active">
+                                <span class="sn-icon">
+                                    <span icon-data="grid"></span>
+                                </span>
+                                Dashboard
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="sn-icon">
+                                    <span icon-data="git_commit"></span>
+                                </span>
+                                Settings
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="sn-icon">
+                                    <span icon-data="users"></span>
+                                </span>
+                                Users
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="sidebar-footer">
+                <div class="sidebar-footer-content">
+                    <span class="sn-icon">
+                        <span icon-data="settings"></span>
+                    </span>
+                    <div class="footer-text">
+                        <span>Settings</span>
+                    </div>
+                </div>
+                <div class="sidebar-profile">
+                    <img src="https://demo.bootstrapdash.com/azia/src/img/faces/face1.jpg" alt="User profile">
+                    <div class="sidebar-profile-info">
+                        <span class="sidebar-profile-name">Sienna Hewitt</span>
+                        <span class="sidebar-profile-role">Manager</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </aside>
     <header>
